# fetcher

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  build.rs  index.html  search-index.js  settings.json  settings.yml
aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
doc/: settings.md
fetcher/: index.html  sidebar-items.js
fetcher/clients/: index.html  sidebar-items.js  struct.BaseProviderData.html  struct.ProviderData.html  struct.SeriesData.html  trait.Client.html
fetcher/providers/: index.html  sidebar-items.js  struct.DummyProvider.html  trait.Provider.html
fetcher/settings/: index.html  sidebar-items.js  struct.FetchSettings.html  struct.Settings.html  struct.SortSettings.html
hyper/header/: struct.HeadersItems.html
hyper/net/: struct.NetworkConnections.html
num/iter/: struct.Range.html  (+3 more)
peresil/: enum.Status.html  index.html  macro.try_parse!.html  struct.Alternate.html  struct.ParseMaster.html  struct.Progress.html  struct.StringPoint.html  trait.Point.html  trait.Recoverable.html  type.Identifier.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
regex/: enum.CaptureNames.html  struct.FindCaptures.html  struct.FindMatches.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SetMatchesIntoIter.html  struct.SetMatchesIter.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html
serde_yaml/: index.html  sidebar-items.js
src/: client.rs  lib.rs  main.rs
sxd_document/: index.html  struct.Package.html  struct.PrefixedName.html  struct.QName.html  trait.XmlChar.html
sxd_xpath/: enum.ExpressionError.html  enum.LiteralValue.html  enum.Value.html  index.html  macro.nodeset!.html  sidebar-items.js  struct.EvaluationContext.html  struct.Factory.html  trait.Expression.html  type.Functions.html  type.Namespaces.html  type.Variables.html
tests/: base_provider.json  provider.json  series.json  settings-good.yml
typed_arena/: index.html  struct.Arena.html
unicode_normalization/: struct.Decompositions.html  struct.Recompositions.html
utf8_ranges/: struct.Utf8Sequences.html
(+162 files in other folders)
