[package]
authors = ["David Barnett <david@barnett.net.nz>"]
build = "build.rs"
license = "MIT"
name = "fetcher"
version = "0.0.1"

[[bin]]
name = "mover"
path = "src/mover/main.rs"

[[bin]]
name = "getter"
path = "src/getter/main.rs"

[build-dependencies]
syntex = "*"

[build-dependencies.serde_codegen]
optional = true
version = "*"

[dependencies]
env_logger = "*"
hyper = "*"
log = "*"
serde = "^0.7.0"
serde_json = "^0.7.0"
sxd-document = "*"
sxd-xpath = "*"
url = "*"

[dependencies.serde_macros]
optional = true
version = "*"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]
unstable = ["serde_macros"]

[lib]
name = "fetcher"
path = "src/lib.rs"
