[package]
authors = ["David Barnett <david@barnett.net.nz>"]
build = "build.rs"
license = "MIT"
name = "fetcher"
version = "0.0.1"

[[bin]]
name = "fetcherd"
path = "src/fetcherd/main.rs"

[build-dependencies]
syntex = "*"

[build-dependencies.serde_codegen]
optional = true
version = "*"

[dependencies]
env_logger = "*"
hyper = "*"
log = "*"
serde = "^0.7.0"
serde_json = "^0.7.0"
sxd-document = "*"
sxd-xpath = "*"
url = "*"
yaml-rust = "0.3.0"

[dependencies.serde_yaml]
git = "https://github.com/zyphrus/serde-yaml"
optional = false

[dependencies.serde_macros]
optional = true
version = "*"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]
unstable = ["serde_macros"]

[lib]
name = "fetcher"
path = "src/fetcher/lib.rs"
